Updated contactinfo.html & updated readme.
Excludes emails and will create a Contact Me form in later revisions.

--- a/contactinfo.html
+++ b/contactinfo.html
@@ -77,11 +77,6 @@
             <div class="column left-large">
                 <h1>Contact Information</h1>
                 <div class="card">
-                    <h2>Email</h2>
-                    <p>Personal Email: jasoneckardttaing@gmail.com</p>
-                    <p>College Email: jeckardt-taing25@adrian.edu</p>
-                </div>
-                <div class="card">
                     <h2>About me</h2>
                     <p>Currently majoring in Computer Science and looking for IT / Software Development internships over the summer vacation.</p>
                 </div>
@@ -110,7 +105,7 @@
                 </div>
                 <div class="card">
                     <h3>Contact Me</h3>
-                    <p>jasoneckardttaing@gmail.com</p>
+                    <p>I will create a Contact Me form!</p>
                 </div>
             </div>
         </div>
