Updated links to be accurate.
Added LinkedIn and GitHub links.

--- a/contactinfo.html
+++ b/contactinfo.html
@@ -93,9 +93,9 @@
                 <div class="card">
                     <h3>Links</h3>
                     <ul class="external-links-content no-bullets">
-                        <li class="linkedin"><i class="fa fa-linkedin"></i><a href="https://www.linkedin.com/" target="_blank"
+                        <li class="linkedin"><i class="fa fa-linkedin"></i><a href="https://www.linkedin.com/in/jason-eckardt-taing-a9284b238/" target="_blank"
                                 class="external-links-box-item item-sm linkedin card-item">LinkedIn</a></li>
-                        <li class="github"><i class="fa fa-github"></i><a href="https://www.linkedin.com/in/jason-eckardt-taing-a9284b238/" target="_blank"
+                        <li class="github"><i class="fa fa-github"></i><a href="https://github.com/JasonEckardt" target="_blank"
                                 class="external-links-box-item item-sm github card-item">GitHub</a></li>
                         <li class="twitch"><i class="fa fa-twitch"></i><a href="https://www.twitch.tv/tech_base" target="_blank"
                                 class="external-links-box-item item-sm twitch card-item">Twitch</a></li>
